wayland: Truncate strings sent via plasmawindowmanager interface

Wayland has a limited size for strings in arguments. We should truncate
any strings that come from user-defined data before sending.

We keep the full title around within kwin as it keeps logic simpler.
Size length logic is lifted from QWaylandWindow's setTitle

BUG: 465775


(cherry picked from commit f88ff99d82f3e2f9811d174838d28fc4339e2284)